tests/missing-enum-starting-brace.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected an opening '{' in the custom enum.
// CHECK-NEXT: enum x a
// CHECK-NEXT:        ^

enum x a
